Update paths for GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=/bosque-palmas-machin/">
+    <meta http-equiv="refresh" content="0; url=/4x4-travel-eje/bosque-palmas-machin/">
     <title>4X4 Travel Eje - Redireccionando...</title>
     <style>
         body {
@@ -35,9 +35,9 @@
 </head>
 <body>
     <div>
-        <img src="/bosque-palmas-machin/assets/images/4x4travelejelogo.png" alt="4X4 Travel Eje" class="logo">
+        <img src="/4x4-travel-eje/bosque-palmas-machin/assets/images/4x4travelejelogo.png" alt="4X4 Travel Eje" class="logo">
         <p>Redireccionando a la expedición...</p>
-        <p>Si no eres redireccionado automáticamente, <a href="/bosque-palmas-machin/">haz clic aquí</a>.</p>
+        <p>Si no eres redireccionado automáticamente, <a href="/4x4-travel-eje/bosque-palmas-machin/">haz clic aquí</a>.</p>
     </div>
 </body>
 </html>
