Optimize hero images: Convert to WebP format and add preloading

--- a/bosque-palmas-machin/index.html
+++ b/bosque-palmas-machin/index.html
@@ -18,6 +18,8 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/4x4-travel-eje/bosque-palmas-machin/assets/images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/4x4-travel-eje/bosque-palmas-machin/assets/images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/4x4-travel-eje/bosque-palmas-machin/assets/images/favicon-16x16.png">
+  <link rel="preload" as="image" href="/4x4-travel-eje/bosque-palmas-machin/assets/images/hero_1.webp" fetchpriority="high">
+  <link rel="preload" as="image" href="/4x4-travel-eje/bosque-palmas-machin/assets/images/hero_2.webp" fetchpriority="high">
   <link rel="stylesheet" href="/4x4-travel-eje/bosque-palmas-machin/assets/style.css">
   <script type="application/ld+json">
   {
@@ -82,6 +84,7 @@
       </div>
       <p class="gp-hero-dates">21 al 23 de noviembre de 2025</p>
       <p>Fin de semana 4x4 con paisajes únicos, termales y ascenso en trocha al volcán Machín. Cupos limitados a 10 vehículos.</p>
+
       <a href="#registro" class="btn btn-primary">¡Reserva tu cupo!</a>
       <div class="benefits-grid">
         <div class="benefit-item">
