Update features section: Remove 'Ruta 4x4' and enhance remaining features

--- a/bosque-palmas-machin/index.html
+++ b/bosque-palmas-machin/index.html
@@ -102,10 +102,18 @@
       <h2>Vive la aventura en el corazón de los Andes</h2>
       <p class="section-intro">Desde Salento hasta Cajamarca, recorremos el Camino Nacional hacia Toche, visitamos un bosque con más de 700 mil palmas de cera, disfrutamos de aguas termales volcánicas y coronamos con un ascenso en trocha al Cerro Machín.</p>
       <div class="features-grid">
-        <div class="feature-item"><h3>Ruta 4x4</h3><p>Desafíos controlados para disfrutar sin preocupaciones.</p></div>
-        <div class="feature-item"><h3>Paisajes</h3><p>Palmas de cera, montañas y termales.</p></div>
-        <div class="feature-item"><h3>Grupo</h3><p>Ambiente seguro y familiar (12+ años).</p></div>
-        <div class="feature-item"><h3>Exclusivo</h3><p>Sólo 10 vehículos; atención personalizada.</p></div>
+        <div class="feature-item">
+          <h3>Paisajes Únicos</h3>
+          <p>El bosque de palmas más grande del mundo, aguas termales volcánicas y vistas panorámicas de los Andes.</p>
+        </div>
+        <div class="feature-item">
+          <h3>Ambiente Familiar</h3>
+          <p>Expedición diseñada para aventureros desde 12 años, con guías expertos y protocolos de seguridad.</p>
+        </div>
+        <div class="feature-item">
+          <h3>Experiencia VIP</h3>
+          <p>Grupo selecto de 10 vehículos, atención personalizada y alojamiento premium en Salento.</p>
+        </div>
       </div>
     </section>
 
