Add fourth feature card: Aventura Guiada

--- a/bosque-palmas-machin/index.html
+++ b/bosque-palmas-machin/index.html
@@ -114,6 +114,10 @@
           <h3>Experiencia VIP</h3>
           <p>Grupo selecto de 10 vehículos, atención personalizada y alojamiento premium en Salento.</p>
         </div>
+        <div class="feature-item">
+          <h3>Aventura Guiada</h3>
+          <p>Equipo profesional con amplia experiencia en rutas 4x4, asistencia mecánica y comunicación permanente.</p>
+        </div>
       </div>
     </section>
 
