Update expedition name to include 'Volcán' in Cerro Machín

--- a/bosque-palmas-machin/index.html
+++ b/bosque-palmas-machin/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="color-scheme" content="dark" />
-  <title>Expedición Bosque de Palmas & Cerro Machín (21-23 Nov 2025) | 4X4 Travel Eje</title>
+  <title>Expedición Bosque de Palmas & Cerro Volcán Machín (21-23 Nov 2025) | 4X4 Travel Eje</title>
   <meta name="description" content="Vive un fin de semana 4x4 por el Bosque de Palmas y el volcán Cerro Machín: aventura, paisajes y actividades en grupo. Cupos limitados a 10 vehículos." />
   <meta property="og:site_name" content="4X4 Travel Eje" />
-  <meta property="og:title" content="Expedición Bosque de Palmas & Cerro Machín | 21-23 Nov 2025 | 4X4 Travel Eje" />
+  <meta property="og:title" content="Expedición Bosque de Palmas & Cerro Volcán Machín | 21-23 Nov 2025 | 4X4 Travel Eje" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Aventura 4x4 exclusiva: 10 vehículos, guías, hospedaje, alimentación y actividades únicas entre Salento y Cajamarca." />
   <meta property="og:image" content="/4x4-travel-eje/bosque-palmas-machin/assets/images/sharing.png" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Expedición Bosque de Palmas & Cerro Machín | 21-23 Nov 2025 | 4X4 Travel Eje" />
+  <meta name="twitter:title" content="Expedición Bosque de Palmas & Cerro Volcán Machín | 21-23 Nov 2025 | 4X4 Travel Eje" />
   <meta name="twitter:description" content="Vive un fin de semana 4x4 con paisajes únicos, termales y ascenso al volcán Machín. Cupos limitados." />
   <meta name="twitter:image" content="/4x4-travel-eje/bosque-palmas-machin/assets/images/sharing.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/4x4-travel-eje/bosque-palmas-machin/assets/images/apple-touch-icon.png">
@@ -25,7 +25,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Event",
-    "name": "Expedición Bosque de Palmas & Cerro Machín",
+    "name": "Expedición Bosque de Palmas & Cerro Volcán Machín",
     "startDate": "2025-11-21",
     "endDate": "2025-11-23",
     "eventAttendanceMode": "https://schema.org/OfflineEventAttendanceMode",
@@ -80,7 +80,7 @@
         <img src="/4x4-travel-eje/bosque-palmas-machin/assets/images/4x4travelejelogo.png" alt="4X4 Travel Eje logo">
       </div>
       <div class="hero-title">
-        <h1>Bosque de Palmas & Cerro Machín</h1>
+        <h1>Bosque de Palmas & Cerro Volcán Machín</h1>
       </div>
       <p class="gp-hero-dates">21 al 23 de noviembre de 2025</p>
       <p>Fin de semana 4x4 con paisajes únicos, termales y ascenso en trocha al volcán Machín. Cupos limitados a 10 vehículos.</p>
