--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0; url=/4x4-travel-eje/bosque-palmas-machin/">
-    <title>4X4 Travel Eje - Redireccionando...</title>
+    <title>Expedición Bosque de Palmas & Cerro Volcán Machín - Redireccionando...</title>
     <style>
         body {
             background: #0b0f14;
