Add and optimize hero_3 image, update slider

--- a/bosque-palmas-machin/index.html
+++ b/bosque-palmas-machin/index.html
@@ -20,6 +20,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/4x4-travel-eje/bosque-palmas-machin/assets/images/favicon-16x16.png">
   <link rel="preload" as="image" href="/4x4-travel-eje/bosque-palmas-machin/assets/images/hero_1.webp" fetchpriority="high">
   <link rel="preload" as="image" href="/4x4-travel-eje/bosque-palmas-machin/assets/images/hero_2.webp" fetchpriority="high">
+  <link rel="preload" as="image" href="/4x4-travel-eje/bosque-palmas-machin/assets/images/hero_3.webp" fetchpriority="high">
   <link rel="stylesheet" href="/4x4-travel-eje/bosque-palmas-machin/assets/style.css">
   <script type="application/ld+json">
   {
