Enhance conversion optimization with improved CTAs and pricing section

--- a/bosque-palmas-machin/index.html
+++ b/bosque-palmas-machin/index.html
@@ -86,13 +86,17 @@
       <p class="gp-hero-dates">21 al 23 de noviembre de 2025</p>
       <p>Fin de semana 4x4 con paisajes únicos, termales y ascenso en trocha al volcán Machín. Cupos limitados a 10 vehículos.</p>
 
-      <a href="#registro" class="btn btn-primary">¡Reserva tu cupo!</a>
+      <div class="hero-cta">
+        <p class="spots-left">¡Solo quedan <strong>3 cupos</strong> disponibles!</p>
+        <a href="#registro" class="btn btn-primary pulse">¡Asegura tu cupo ahora!</a>
+        <p class="guarantee">Reserva segura con reembolso hasta el 21 de octubre</p>
+      </div>
       <div class="benefits-grid">
         <div class="benefit-item">
-          <a href="#incluye" class="btn btn-secondary">Quiero saber qué incluye</a>
+          <a href="#incluye" class="btn btn-secondary">Ver todo lo que incluye →</a>
         </div>
         <div class="benefit-item">
-          <a href="#itinerario" class="btn btn-secondary">¿Cuál es la ruta?</a>
+          <a href="#itinerario" class="btn btn-secondary">Descubre la ruta completa →</a>
         </div>
       </div>
     </div>
@@ -169,20 +173,48 @@
     </section>
 
     <section id="registro" class="content-section section-colored">
-      <h2>Inversión y registro</h2>
+      <h2>¡Asegura tu lugar en esta aventura única!</h2>
+      <p class="section-intro">Una experiencia exclusiva con cupos limitados para garantizar atención personalizada y el mejor servicio.</p>
+      
       <div class="pricing-info">
-        <ul>
-          <li><strong>Costo por persona:</strong> $580.550</li>
-          <li><strong>Cupos:</strong> 10 vehículos</li>
+        <div class="price-highlight">
+          <span class="price-label">Inversión por persona</span>
+          <span class="price-amount">$580.550</span>
+          <span class="price-note">Todo incluido: hospedaje, alimentación, guías y más</span>
+        </div>
+        <div class="spots-counter">
+          <div class="counter-label">Cupos disponibles</div>
+          <div class="counter-number">3 de 10</div>
+          <div class="counter-bar">
+            <div class="counter-progress" style="width: 70%"></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="benefits-summary">
+        <h3>Lo que obtienes:</h3>
+        <ul class="checkmark-list">
+          <li>✓ 2 noches de hospedaje premium en Salento</li>
+          <li>✓ Cena de integración y todas las comidas incluidas</li>
+          <li>✓ Guías profesionales y asistencia 24/7</li>
+          <li>✓ Kit de expedición exclusivo</li>
+          <li>✓ Fotos y videos profesionales de tu aventura</li>
         </ul>
-        <p>Tu cupo queda asegurado únicamente con el pago de la inscripción.</p>
       </div>
+
       <div class="payment-info">
-        <p><strong>Pagos:</strong> Bancolombia Ahorros 75600011901 — Maritza Gallego Urrego — CC 1094882412</p>
-        <p><strong>Política de reembolsos:</strong> 100% hasta el 21 de octubre; 50% hasta el 26 de octubre; desde el 1 de noviembre no hay reembolso.</p>
+        <div class="secure-payment">
+          <h3>Pago Seguro y Flexible</h3>
+          <p>Bancolombia Ahorros 75600011901<br>Maritza Gallego Urrego — CC 1094882412</p>
+          <p class="refund-policy">Reembolso del 100% disponible hasta el 21 de octubre</p>
+        </div>
       </div>
+
       <div class="cta-actions">
-        <a class="btn btn-primary" href="https://wa.me/573045374705?text=Quiero%20inscribirme%20a%20la%20Expedici%C3%B3n%20Bosque%20de%20Palmas%20%26%20Cerro%20Mach%C3%ADn%20(21-23%20Nov%202025)" target="_blank" rel="noopener noreferrer">Inscribirme por WhatsApp</a>
+        <a class="btn btn-primary pulse" href="https://wa.me/573045374705?text=Quiero%20inscribirme%20a%20la%20Expedici%C3%B3n%20Bosque%20de%20Palmas%20%26%20Cerro%20Volc%C3%A1n%20Mach%C3%ADn%20(21-23%20Nov%202025)" target="_blank" rel="noopener noreferrer">
+          ¡Reserva tu cupo ahora! →
+        </a>
+        <p class="cta-urgency">¡No te quedes por fuera de esta experiencia única!</p>
       </div>
     </section>
 
