Enhance expedition dates visibility and emphasize expedition concept

--- a/bosque-palmas-machin/index.html
+++ b/bosque-palmas-machin/index.html
@@ -80,11 +80,19 @@
       <div class="hero-logo">
         <img src="/4x4-travel-eje/bosque-palmas-machin/assets/images/4x4travelejelogo.png" alt="4X4 Travel Eje logo">
       </div>
+      <div class="expedition-badge">Expedición 4x4</div>
       <div class="hero-title">
         <h1>Bosque de Palmas & Cerro Volcán Machín</h1>
       </div>
-      <p class="gp-hero-dates">21 al 23 de noviembre de 2025</p>
-      <p>Fin de semana 4x4 con paisajes únicos, termales y ascenso en trocha al volcán Machín. Cupos limitados a 10 vehículos.</p>
+      <div class="expedition-dates">
+        <div class="date-badge">
+          <div class="date-month">Noviembre</div>
+          <div class="date-days">21-23</div>
+          <div class="date-year">2025</div>
+        </div>
+        <p class="date-description">3 días de aventura · 2 noches de alojamiento premium</p>
+      </div>
+      <p class="expedition-intro">Una expedición única a través de paisajes espectaculares, termales volcánicos y el majestuoso bosque de palmas más grande del mundo. Cupos limitados a 10 vehículos.</p>
 
       <div class="hero-cta">
         <p class="spots-left">¡Solo quedan <strong>3 cupos</strong> disponibles!</p>
@@ -173,8 +181,13 @@
     </section>
 
     <section id="registro" class="content-section section-colored">
-      <h2>¡Asegura tu lugar en esta aventura única!</h2>
-      <p class="section-intro">Una experiencia exclusiva con cupos limitados para garantizar atención personalizada y el mejor servicio.</p>
+      <div class="expedition-dates-compact">
+        <span class="compact-label">Expedición</span>
+        <span class="compact-dates">21-23 Noviembre 2025</span>
+        <span class="compact-duration">3 días de aventura</span>
+      </div>
+      <h2>¡Únete a esta expedición única!</h2>
+      <p class="section-intro">Una aventura 4x4 exclusiva y cuidadosamente planeada, con cupos limitados para garantizar una experiencia inolvidable.</p>
       
       <div class="pricing-info">
         <div class="price-highlight">
