Nueva galería mejorada: vista previa con badges de Google Photos, títulos descriptivos y diseño moderno

--- a/bosque-palmas-machin/index.html
+++ b/bosque-palmas-machin/index.html
@@ -228,11 +228,68 @@
     <section id="galeria" class="content-section">
       <h2>Galería de Expediciones Anteriores</h2>
       <p class="section-intro">Descubre las experiencias reales de nuestros aventureros en expediciones pasadas. Estas imágenes te darán una idea de lo que vivirás en esta expedición única.</p>
-      <ul class="gallery-links">
-        <li><a href="https://photos.app.goo.gl/BvyRcjdqs3vTvYcz9" target="_blank" rel="noopener noreferrer">Álbum 1</a></li>
-        <li><a href="https://photos.app.goo.gl/71RbpDh7DwFdfZa4A" target="_blank" rel="noopener noreferrer">Álbum 2</a></li>
-        <li><a href="https://photos.app.goo.gl/ifNRyV9hJCXzAzVt6" target="_blank" rel="noopener noreferrer">Álbum 3</a></li>
-      </ul>
+      
+      <div class="gallery-grid">
+        <div class="gallery-item">
+          <div class="gallery-preview">
+            <img src="assets/images/gallery-preview-1.jpg" alt="Vista previa Expedición Valle del Cocora" class="preview-image" loading="lazy">
+            <div class="google-photos-badge">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+              </svg>
+              Google Photos
+            </div>
+          </div>
+          <div class="gallery-info">
+            <h3>Expedición Valle del Cocora</h3>
+            <p>Paisajes majestuosos y palmas de cera</p>
+            <span class="photo-count">+150 fotos</span>
+          </div>
+          <a href="https://photos.app.goo.gl/BvyRcjdqs3vTvYcz9" target="_blank" rel="noopener noreferrer" class="gallery-link">
+            Ver álbum completo →
+          </a>
+        </div>
+
+        <div class="gallery-item">
+          <div class="gallery-preview">
+            <img src="assets/images/gallery-preview-2.jpg" alt="Vista previa Expedición Cerro Machín" class="preview-image" loading="lazy">
+            <div class="google-photos-badge">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+              </svg>
+              Google Photos
+            </div>
+          </div>
+          <div class="gallery-info">
+            <h3>Expedición Cerro Machín</h3>
+            <p>Aventuras 4x4 y vistas panorámicas</p>
+            <span class="photo-count">+120 fotos</span>
+          </div>
+          <a href="https://photos.app.goo.gl/71RbpDh7DwFdfZa4A" target="_blank" rel="noopener noreferrer" class="gallery-link">
+            Ver álbum completo →
+          </a>
+        </div>
+
+        <div class="gallery-item">
+          <div class="gallery-preview">
+            <img src="assets/images/gallery-preview-3.jpg" alt="Vista previa Expedición Bosque de Palmas" class="preview-image" loading="lazy">
+            <div class="google-photos-badge">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+              </svg>
+              Google Photos
+            </div>
+          </div>
+          <div class="gallery-info">
+            <h3>Expedición Bosque de Palmas</h3>
+            <p>Naturaleza salvaje y aventura extrema</p>
+            <span class="photo-count">+200 fotos</span>
+          </div>
+          <a href="https://photos.app.goo.gl/ifNRyV9hJCXzAzVt6" target="_blank" rel="noopener noreferrer" class="gallery-link">
+            Ver álbum completo →
+          </a>
+        </div>
+      </div>
     </section>
 
     <section id="cupos-disponibles" class="content-section section-colored text-center">
