--- a/bosque-palmas-machin/index.html
+++ b/bosque-palmas-machin/index.html
@@ -47,7 +47,8 @@
       { rel: 'preload', as: 'image', href: 'images/hero_1.webp', fetchpriority: 'high' },
       { rel: 'preload', as: 'image', href: 'images/logo/logo-final.png', fetchpriority: 'high' },
       { rel: 'stylesheet', href: 'design-system.css' },
-      { rel: 'stylesheet', href: 'style.css' }
+      { rel: 'stylesheet', href: 'style.css' },
+      { rel: 'stylesheet', href: 'layout-consistency.css' }
     ];
 
     assets.forEach(asset => {
@@ -167,7 +168,7 @@
         
         <div class="itinerary-container mb-xl">
           <details class="itinerary-day p-m" open>
-            <summary class="mb-s">Viernes: Llegada a Salento — Cena de Integración</summary>
+            <summary>Viernes: Llegada a Salento — Cena de Integración</summary>
             <div class="itinerary-content">
               <p class="mb-s"><strong>15:00 - 17:00:</strong> Llegada a Salento y check-in en uno de los mejores hoteles de la región. Tiempo libre para explorar el pueblo mágico y sus calles coloridas.</p>
               <p class="mb-s"><strong>19:00 - 21:00:</strong> Cena de integración en restaurante local. Conoce a tu equipo de aventureros y guías. Charla sobre la expedición y preparativos para el día siguiente.</p>
@@ -175,7 +176,7 @@
             </div>
           </details>
           <details class="itinerary-day p-m">
-            <summary class="mb-s">Sábado: Salento — Toche — Termales</summary>
+            <summary>Sábado: Salento — Toche — Termales</summary>
             <div class="itinerary-content">
               <p class="mb-s"><strong>07:00 - 08:00:</strong> Desayuno en el hotel y preparación de vehículos.</p>
               <p class="mb-s"><strong>08:30:</strong> Salida desde Salento hacia el Camino Nacional. Inicio de la aventura 4x4 por rutas de montaña.</p>
@@ -187,7 +188,7 @@
             </div>
           </details>
           <details class="itinerary-day p-m">
-            <summary class="mb-s">Domingo: Ascenso Cerro Machín — Cajamarca</summary>
+            <summary>Domingo: Ascenso Cerro Machín — Cajamarca</summary>
             <div class="itinerary-content">
               <p class="mb-s"><strong>07:00 - 08:00:</strong> Desayuno y preparación para el ascenso al volcán.</p>
               <p class="mb-s"><strong>08:30 - 10:30:</strong> Ascenso en trocha 4x4 hasta el cráter del volcán Cerro Machín (2,750m). Recorrido por senderos de montaña con vistas panorámicas de la Cordillera Central.</p>
@@ -201,9 +202,9 @@
         <div class="itinerary-cta p-xl">
           <h3 class="mb-s">Tu Aventura 4x4 Te Espera</h3>
           <p class="mb-l">Una travesía diseñada para todo amante del todo terreno. Rutas accesibles, paisajes majestuosos y experiencias únicas te aguardan. <strong>No se requiere experiencia previa - solo pasión por la aventura y un 4x4.</strong></p>
-                      <a class="btn btn-primary" href="https://wa.me/573045374705?text=Quiero%20inscribirme%20a%20la%20Expedici%C3%B3n%20Bosque%20de%20Palmas%20%26%20Cerro%20Volc%C3%A1n%20Mach%C3%ADn%20(21-23%20Nov%202025)" target="_blank" rel="noopener noreferrer">
-              ¡RESERVA MI CUPO AHORA! →
-            </a>
+          <a class="btn btn-primary pulse" href="https://wa.me/573045374705?text=Quiero%20inscribirme%20a%20la%20Expedici%C3%B3n%20Bosque%20de%20Palmas%20%26%20Cerro%20Volc%C3%A1n%20Mach%C3%ADn%20(21-23%20Nov%202025)" target="_blank" rel="noopener noreferrer">
+              ¡Reserva tu cupo ahora!
+          </a>
         </div>
       </div>
     </section>
@@ -364,7 +365,7 @@
           <div class="unified-cta mt-xl">
             <p class="urgency-text mb-l">No pierdas la oportunidad de ser parte de esta expedición exclusiva. Los últimos cupos se asignan por orden de reserva.</p>
             <a class="btn btn-primary pulse" href="https://wa.me/573045374705?text=Quiero%20inscribirme%20a%20la%20Expedici%C3%B3n%20Bosque%20de%20Palmas%20%26%20Cerro%20Volc%C3%A1n%20Mach%C3%ADn%20(21-23%20Nov%202025)" target="_blank" rel="noopener noreferrer">
-              ¡Asegura tu Lugar Ahora! →
+              ¡Asegura tu lugar ahora!
             </a>
           </div>
         </div>
@@ -413,7 +414,7 @@
 
         <div class="cta-actions gap-m">
           <a class="btn btn-primary pulse" href="https://wa.me/573045374705?text=Quiero%20inscribirme%20a%20la%20Expedici%C3%B3n%20Bosque%20de%20Palmas%20%26%20Cerro%20Volc%C3%A1n%20Mach%C3%ADn%20(21-23%20Nov%202025)" target="_blank" rel="noopener noreferrer">
-            ¡Reserva tu cupo ahora! →
+            ¡Reserva tu cupo ahora!
           </a>
           <p class="cta-urgency">¡Reserva tu cupo ahora y asegura tu lugar en esta experiencia única!</p>
       </div>
@@ -422,21 +423,18 @@
 
   <!-- Sticky WhatsApp CTA -->
   <div class="sticky-whatsapp-cta">
-    <div class="sticky-cta-content">
+    <a class="sticky-cta-content" href="https://wa.me/573045374705?text=Quiero%20inscribirme%20a%20la%20Expedici%C3%B3n%20Bosque%20de%20Palmas%20%26%20Cerro%20Volc%C3%A1n%20Mach%C3%ADn%20(21-23%20Nov%202025)" target="_blank" rel="noopener noreferrer">
       <div class="sticky-cta-text">
         <span class="sticky-cta-title">¡Reserva tu cupo!</span>
         <span class="sticky-cta-subtitle">Solo 3 cupos disponibles</span>
       </div>
-      <a href="https://wa.me/573045374705?text=Quiero%20inscribirme%20a%20la%20Expedici%C3%B3n%20Bosque%20de%20Palmas%20%26%20Cerro%20Volc%C3%A1n%20Mach%C3%ADn%20(21-23%20Nov%202025)" 
-         target="_blank" 
-         rel="noopener noreferrer" 
-         class="sticky-whatsapp-btn">
+      <span class="sticky-whatsapp-btn">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
           <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.885 3.488"/>
         </svg>
         <span>WhatsApp</span>
-      </a>
-    </div>
+      </span>
+    </a>
   </div>
 
 
