--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=/4x4-travel-eje/bosque-palmas-machin/">
-    <title>Expedición Bosque de Palmas & Cerro Volcán Machín - Redireccionando...</title>
+    <meta http-equiv="refresh" content="0; url=/expedicion-palmas-de-cera-y-volcan-machin/">
+    <title>Expedición Bosque de Palmas de Cera y Cerro Volcán Machín - Redireccionando...</title>
     <style>
         body {
             background: #0b0f14;
@@ -35,9 +35,9 @@
 </head>
 <body>
     <div>
-        <img src="/4x4-travel-eje/bosque-palmas-machin/assets/images/4x4travelejelogo.png" alt="4X4 Travel Eje" class="logo">
+        <img src="/expedicion-palmas-de-cera-y-volcan-machin/assets/images/4x4travelejelogo.png" alt="4X4 Travel Eje" class="logo">
         <p>Redireccionando a la expedición...</p>
-        <p>Si no eres redireccionado automáticamente, <a href="/4x4-travel-eje/bosque-palmas-machin/">haz clic aquí</a>.</p>
+        <p>Si no eres redireccionado automáticamente, <a href="/expedicion-palmas-de-cera-y-volcan-machin/">haz clic aquí</a>.</p>
     </div>
 </body>
 </html>
